# DataExtract

./: .env.template  .gitignore  README.md  config.py  examples.py  main.py  pipeline.py  pyproject.toml
POLICY_TEST/: 国务院办公厅关于进一步加大稳就业政策支持力度的通知.txt  市工业和信息化局关于印发《深圳市有力有效支持发展瞪羚企业、独角兽企业行动计划（2025—2027年）》的通知.txt  广东省人民政府办公厅关于印发广东省哲学.txt  广州南沙经济技术开发区科学技术局关于印发南沙元宇宙产业先导示范区入驻管理暂行办法的通知.txt  广州市天河区发展和改革局 广州市天河中央商务区管理委员会 广州市天河区科技工业和信息化局 加快培育个体工商户和小微企业转型升级的若干政策措施的通知.txt  广州市天河区发展和改革局关于开展天河区租赁和商务服务业加快培育个体工商户和小微企业转型升级的若干政策措施申报工作的通知.txt  广州市工业和信息化局关于印发《广州市“5G+工业互联网”融合应用试点城市方案》的通知.txt  广州市市场监督管理局关于印发广州市促进化妆品产业高质量发展专项扶持办法的通知.txt  广州市海珠区人力资源和社会保障局关于印发广州市海珠区关于促进人力资源服务业创新发展的若干措施的通知.txt  广州市花都区科技工业和信息化局关于印发花都区中小企业助保贷业务管理办法的通知.txt  广州市花都区科技工业和信息化局关于印发花都区支持制造业数字化发展实施细则的通知.txt  广州开发区 广州市黄埔区促进文旅产业与版权经济高质量发展的若干措施.txt  广州开发区（黄埔区）促进人才高质量发展的政策措施.txt  海关总署 国家移民局 中国民航局关于进一步促进航空口岸通关便利化若干措施的通知.txt
agno/: extraction.py  extractors.py  llm.py  main.py  schema.py
docs/: REAMDE.md  agno.md  langextract.md  llm.md
example/: main.py  policy_prompt.txt  test.py
examples/: .env  main.py  output.json  policy_input.txt
examples/解析样例/: 广东省人民政府广州市粤企政企通0820样式分析.doc  广东省科技业务管理阳光政务平台科研项目申报解析案例.docx  广州各区具体政策word样式分析.doc  (+2 more)
extract/: config.py  examples.py  main.py  normalizers.py  pipeline.py  qifu.py  visualize.py
inputs/: policy1.txt  policy2.txt
llm/: main.py  prompt.py
outputs/: agno-result.json  extract-results.jsonl  visualization.html
policy_files/: 中华人民共和国惠企助企政策样式分析.doc  广州市黄埔区区科技创新局、区科技局科研项目申报智能解析案例.docx  黄埔兑现通政策库样式分析.doc
test/: extractor.py  langextract_test.py  main.py  maintest.py
(+4 files in other folders)
