[project]
name = "qifu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.0.6",
    "langchain>=0.3.27",
    "langextract>=1.0.9",
    "openai>=1.106.1",
    "python-dateutil>=2.9.0.post0",
    "tenacity>=9.1.2",
]
